hphp/hack/test/typecheck/inout/bad_inout_use_lvalue5.php.exp
File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_lvalue5.php", line 6, characters 5-22:
Invalid argument (Typing[4110])
File "bad_inout_use_lvalue5.php", line 3, characters 18-27:
Expected varray<int>
File "bad_inout_use_lvalue5.php", line 6, characters 11-22:
But got (int, int)
